--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <div class="hire-items">Hire me</div>
         </nav>
         <section class="second-section">
-            <div>
-                <p class="first-paragraph">
+            <div class="first-div">
+                <h2 class="first-paragraph">
                     Hello i'm<br>Agbaje Goriola
-                </p>
-                    <h1 class="first-header">Fullstack Developer</h1>
+                </h2>
+                    <p class="first-header">Fullstack Developer</p>
                     <p class="second-paragraph">I specialize in building responsive web applications,combining,<br>sleek front-end designs and robust backend functionality. I have<br>experience with technologies like HTML,CSS,JavaScript and<br>Node Js, ensuring seamless user interactions and efficient data management.</p>
                     <button class="hire-button">Hire me</button>
                     <button class="download-button">Download Cv</button>
